Styled sidebar, fix close-sidebar button overflow, fix overlay

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -125,31 +125,59 @@ aside {
 
   height: 100%;
   width: 0;
-  padding-top: 60px;
+
+  overflow-x: hidden;
+  transition: 0.5s;
+
+  background-color: rgba(0, 0, 0, 0.5);
+}
+section {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.sidebar {
+  position: fixed;
+  z-index: 6;
+  top: 0;
+  right: 0;
+
+  height: 100%;
+  width: 0;
+  padding-top: 15px;
 
   overflow-x: hidden;
   transition: 0.5s;
 
   background-color: rgb(255, 255, 255);
-
-  .opt {
-    display: block;
-    padding: 8px 8px 8px 32px;
-
-    text-decoration: none;
-    font-size: 14px;
-    color: #818181;
-
-    transition: 0.3s;
+  > p {
+    font-weight: bold;
+    text-align: center;
   }
-  #close-btn {
-    position: absolute;
-    top: 0;
-    right: 25px;
+}
+.opt {
+  width: 100%;
+  height: 30px;
 
-    margin-left: 50px;
+  display: flex;
+  align-items: center;
 
-    font-size: 36px;
+  padding-left: 18px;
+
+  transition: 0.3s;
+
+  ion-icon {
+    font-size: 23px;
+    margin-right: 8px;
+  }
+  p {
+    margin-top: 4px;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 14px;
   }
 }
 *.hidden {
@@ -202,11 +230,78 @@ aside {
     }
   }
 }
-@media screen and (max-height: 450px) {
-  aside {
-    padding-top: 15px;
-  }
-  aside .iot {
-    font-size: 18px;
-  }
+#close-btn {
+  position: absolute;
+  top: 47vh;
+  right: 78vw;
+
+  display: flex;
+  font-size: 30px;
+  text-shadow: -1px 0px rgb(0, 0, 0);
+}
+hr.fancy-line {
+  border: 0;
+  height: 1px;
+  position: relative;
+  margin: 0.6em 0; /* Keep other elements away from pseudo elements*/
+}
+hr.fancy-line:before {
+  top: -0.5em;
+  height: 1em;
+}
+hr.fancy-line:after {
+  content: "";
+  height: 0.5em; /* half the height of :before */
+  top: 1px; /* height of hr*/
+}
+hr.fancy-line:before,
+hr.fancy-line:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+}
+hr.fancy-line,
+hr.fancy-line:before {
+  background: -moz-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(0, 0, 0, 0.1) 0%,
+    rgba(0, 0, 0, 0) 75%
+  );
+  background: -webkit-gradient(
+    radial,
+    center center,
+    0px,
+    center center,
+    75%,
+    color-stop(0%, rgba(0, 0, 0, 0.1)),
+    color-stop(75%, rgba(0, 0, 0, 0))
+  );
+  background: -webkit-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(0, 0, 0, 0.1) 0%,
+    rgba(0, 0, 0, 0) 75%
+  );
+  background: -o-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(0, 0, 0, 0.1) 0%,
+    rgba(0, 0, 0, 0) 75%
+  );
+  background: -ms-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(0, 0, 0, 0.1) 0%,
+    rgba(0, 0, 0, 0) 75%
+  );
+  background: radial-gradient(
+    ellipse at center,
+    rgba(0, 0, 0, 0.1) 0%,
+    rgba(0, 0, 0, 0) 75%
+  );
+}
+body,
+hr.fancy-line:after {
+  background: #f4f4f4;
 }
